# roboadv

./: .gitignore  docker-compose.yml
backend/: a.sql  database.db  db.sqlite3  setup.cfg
backend/api/: api_types.py  main.py
backend/backend/: fetchapple.py  fetchdata.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/backend/migrations/: 0001_initial.py
backend/crud/: __init__.py  crud.py  engine.py  models.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.js  main.ts
frontend/src/components/: DisplayStocks.vue  Portfolio_Separation.vue  Portfolio_Worth.vue
frontend/src/router/: index.ts  main.js
frontend/src/types/: Student.ts
frontend/src/ukit/css/: uikit.css
frontend/src/views/: DashBoard.vue  Dashboard.vue  EditPortfolio.vue  Home.vue  Login.vue  PortfolioView.vue  Registration.vue
