[metadata]
name = ball king
version = 0.1.0
description = Track Ball King scores
author = Michael Glössl
url = https://github.com/MichaelGloessl04/ballking-backend

license = MIT

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    sqlalchemy
    fastapi
    uvicorn

[options.extras_require]
dev =
    flake8
    pytest
    pydantic