[metadata]
name = roboadv_backend
version = 0.1.0
description = View Stocks
author = Simon Schafferhofer
url = https://github.com/schaff190163/roboadv
license = MIT

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    sqlalchemy
    fastapi
    uvicorn

[options.extras_require]
dev =
    flake8
    pytest
    pydantic